# pyvisualiser

./: .gitignore  README.md  __init__.py  audio_config.py  carbonback.py  colour_palette.py  components.py  displaydriver.py  framecore.py  frames.py  macvis.py  moves  my_core_id_file  my_token_file  pivis.py  preamp_frames.py  processaudio.py  pyproject.toml  requirements.txt  roon.py  screenhandler.py  screens.py  screens2.py  subframes.py  test_advanced_visuals.py  test_api_coverage.py  testscreens.py  vis.py  visualiser.py
VU Images/: images.txt
assets/shaders/: balatro.glsl  cloudflight.glsl  discosun.glsl  kalidoscope.glsl  liquidorb.frag.glsl  milkdrop.frag.glsl  pinkball.frag.glsl  (+9 more)
docs/: API_REFERENCE.md  Controls.txt  OpenGL Rendering Pipeline.md  implementation plan.md
park/: core copy  my_core_id_file  my_token_file  visualisers
scripts/: asound.conf  config.txt  setup_kmsdrm.sh  temp  vis
test/: audio_test.py  backgrounds.py  dsi_test.py  gl_demo.py  gl_st1.py  gl_st2.py  gl_st3.py  gl_test.py  gl_testVU.py  gl_testfft.py  gl_vumeter.py  graphics_test.py  kivy10.py  kivy13.py  kivy14.py  kivy15.py  kivy16.py  kivy17.py  kivy18.py  kivy19.py  kivy2.py  kivy20.py  kivy21.py  kivy22.py  kivy23.py  kivy24.py  kivy25.py  kivy26.py  kivy27.py  kivy28.py  kivy3.py  kivy5.py  kivy6.py  kivy7.py  kivy8.py  kivy9.py  kivy_test.py  light.py  rot.py  rot3.py  (+1 more)
tests/: VUscreens.py  gltest.py  rendertest.py  screens.py  screens2.py  screens3.py  screens3py  test_advanced_visuals.py  test_api_coverage.py  test_instantiations.py  testback.py  testscreens.py  vis.py
(+34 files in other folders)
